Fix collection overlaps with the scrollbar. Fix #531

--- a/src/scss/components/_collection-tree.scss
+++ b/src/scss/components/_collection-tree.scss
@@ -4,6 +4,7 @@
 
 .collection-tree {
 	flex: 1 1 0;
+	z-index: 1;
 
 	@include touch-or-bp-down(sm) {
 		display: flex;
